<resources>
    <string name="create_account">Create account</string>
    <string name="app_name">CTAVI</string>
    <string name="valider">VALIDER</string>
    <string name="connexion">CONNEXION</string>
    <string name="bonjour">Bonjour</string>
    <string name="image_isen">image isen</string>
    <string name="mon_fragment">Mon fragment</string>
    <string name="go_to_fragment_test">Go to fragment test</string>
    <string name="fragment_1">Fragment 1</string>
    <string name="frgament_2">Frgament 2</string>
    <string name="second_fragment">Second fragment</string>
    <string name="first_fragment">First fragment</string>
    <string name="go_to_second">Go to second</string>
    <string name="d_connexion">Déconnexion</string>
    <string name="webservices">Webservices</string>
    <string name="permission">Permission</string>
    <string name="sauvegarde">Sauvegarde</string>
    <string name="cycle_de_vie">Cycle de vie</string>
    <string name="home_save">home_save</string>
    <string name="read">Read</string>
    <string name="textview">TextView</string>
    <string name="fields_empty">Toto</string>
    <string name="button">Button</string>
    <string name="date">Date</string>
    <string name="name">name</string>
    <string name="firstname">firstname</string>
    <string name="save">save</string>
    <string name="birthdate">birthDate</string>
    <string name="test">Test</string>
    <string name="identifiant">Identifiant</string>
    <string name="password">Password</string>
    <string name="update_account">Update account</string>
    <string name="create_new_name">Create new name</string>
    <string name="username">Username</string>
    <string name="upload_profile_pic">Upload Profile Pic</string>
</resources>
